--- a/src/assets/color/color.less
+++ b/src/assets/color/color.less
@@ -7,4 +7,4 @@
 @smallFont:16px;
 @Font:23px;
 @bigFont:38px;
-@fontType:"Arial","Microsoft YaHei","黑体","宋体",sans-serif;
+@fontType:"黑体","Arial","Microsoft YaHei","宋体",sans-serif;
